[package]
name = "executor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
chain_observers = { path = "../chain_observers" }
web3 = { version = "0.19.0", features = ["tokio"] }
