[package]
name = "rest_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
chain_observers = { path = "../chain_observers" }
executor = { path = "../executor" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
web3 = { version = "0.19.0", features = ["tokio"] }
